--- a/src/views/Chat/Messages/Messages.scss
+++ b/src/views/Chat/Messages/Messages.scss
@@ -1,9 +1,15 @@
 .Root {
   flex: 1 1 auto;
-  max-height: calc(100% - 80px);
-  overflow-x: visible;
-  overflow-y: scroll;
+  max-height: calc(100% - 160px);
+  overflow: auto;
   padding: 0 28px;
+}
+
+.Wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  min-height: 100%;
 
   & > * {
     margin: 0 0 20px;
