--- a/src/views/Chat/Messages/components/Group.scss
+++ b/src/views/Chat/Messages/components/Group.scss
@@ -3,6 +3,21 @@
   display: flex;
   margin: 40px 0 0;
   width: 100%;
+
+  &Is {
+    &Outcoming {
+      display: flex;
+      flex-direction: row-reverse;
+
+      .Container {
+        align-items: flex-end;
+      }
+
+      .List {
+        align-items: flex-end;
+      }
+    }
+  }
 }
 
 .Author {
@@ -21,6 +36,8 @@
 }
 
 .Container {
+  display: flex;
+  flex-direction: column;
   margin: 0 8px;
   position: relative;
   width: calc(100% - 48px);
