--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -20,6 +20,8 @@
 :global * {
   box-shadow: none;
   box-sizing: inherit;
+  scrollbar-color: transparent transparent;
+  scrollbar-width: thin;
 
   &::after,
   &::before {
@@ -28,6 +30,27 @@
 
   &:focus {
     outline: none;
+  }
+
+  &:hover {
+    scrollbar-color: $color-gray-300 transparent;
+
+    &::-webkit-scrollbar-thumb {
+      background: $color-gray-300;
+      border: 1px solid $color-gray-0;
+    }
+  }
+
+  &::-webkit-scrollbar {
+    width: 8px;
+
+    &-thumb {
+      background: transparent;
+
+      &:hover {
+        background: $color-gray-400;
+      }
+    }
   }
 }
 
