Refactored chat list for new pagination.

--- a/src/views/Chat/Threads/Threads.scss
+++ b/src/views/Chat/Threads/Threads.scss
@@ -8,38 +8,14 @@
   border: none;
   font-size: 12px;
   height: 30px;
-  min-width: 114px;
-}
-
-.Container {
-  height: 100%;
-  position: relative;
+  min-width: 144px;
 }
 
 .Actions {
   align-items: center;
   display: flex;
   margin: 28px 0 12px;
-}
-
-.Find {
-  font-size: 12px;
-  height: 30px;
-  min-width: 30px;
-  width: 30px;
-}
-
-.Search {
-  display: flex;
-  flex: 0 0 40px;
-  justify-content: center;
-  margin: 0 20px 0 0;
-  width: 40px;
-}
-
-.Status {
-  display: flex;
-  max-width: calc(100% - 60px);
+  // max-width: calc(100% - 60px);
 
   & > *:not(:first-child) {
     margin: 0 0 0 12px;
