--- a/src/views/Chat/Threads/Threads.scss
+++ b/src/views/Chat/Threads/Threads.scss
@@ -21,3 +21,24 @@
     margin: 0 0 0 12px;
   }
 }
+
+.Container {
+  height: 100%;
+  max-height: 100%;
+
+  & > div {
+    height: 100%;
+  }
+}
+
+.Loader {
+  height: 80px;
+  position: relative;
+  width: 100%;
+}
+
+.Wrapper {
+  height: 100% !important;
+  margin: 0 -24px;
+  padding: 0 24px;
+}
