--- a/src/views/Flow/Threads/Threads.scss
+++ b/src/views/Flow/Threads/Threads.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   height: calc(100vh - 180px);
+  overflow: scroll;
   padding: 0 20px;
   width: 340px;
 }
