--- a/src/components/Badge/Badge.scss
+++ b/src/components/Badge/Badge.scss
@@ -1,28 +1,20 @@
 @import '~@styles/colors.scss';
 
 @mixin color($color) {
-    background-color: rgba($color, .1);
+  background-color: rgba($color, .1);
 
-    .Icon {
-      border: solid 2px rgba($color, .5);
-      color: rgba($color, .5);
-    }
+  .Icon {
+    border: 2px solid rgba($color, .3);
+    color: $color;
+  }
 }
 
 .Root {
   border-radius: 20px;
   display: flex;
-  margin: 20px 0;
   padding: 20px;
 
   @include coloring;
-}
-
-.Close {
-  border: solid 2px $color-gray-900;
-  border-radius: 20px;
-  height: 30px;
-  width: 30px;
 }
 
 .Icon {
@@ -39,12 +31,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 0 0 0 20px;
+  margin: 0 0 0 16px;
   width: calc(100% - 60px);
 }
 
 .Title {
-  font-weight: 600;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -52,6 +43,5 @@
 
 .Description {
   color: $color-gray-600;
-  font-size: 12px;
-  font-weight: 600;
+  margin: 4px 0 0 0;
 }
