--- a/src/components/Typography/Typography.scss
+++ b/src/components/Typography/Typography.scss
@@ -46,7 +46,7 @@
       line-height: 16px;
     }
 
-    &P {
+    &Text {
       font-size: 14px;
       letter-spacing: -.2px;
       line-height: 24px;
