Added sync refresh token.

--- a/src/components/Form/components/Select/components/common.scss
+++ b/src/components/Form/components/Select/components/common.scss
@@ -53,6 +53,13 @@
   }
 }
 
+.Container {
+  display: flex;
+  justify-content: center;
+  min-width: 100%;
+  position: relative;
+}
+
 .Empty {
   align-items: center;
   display: flex;
