--- a/src/views/Company/containers/Info.scss
+++ b/src/views/Company/containers/Info.scss
@@ -10,9 +10,13 @@
 }
 
 .Content {
-  margin: 0 0 0 20px;
+  margin: 0 0 0 16px;
 }
 
 .Description {
   color: $color-gray-500;
+}
+
+.Title {
+  color: $color-gray-800;
 }
