--- a/src/views/Billing/CurrentPlan/components/Limit.scss
+++ b/src/views/Billing/CurrentPlan/components/Limit.scss
@@ -1,11 +1,14 @@
 @import '~@styles/colors';
 
+.Root {
+  padding: 12px 0;
+}
+
 .Info {
   align-items: center;
   border-top: 1px solid $color-gray-300;
   display: flex;
   justify-content: space-between;
-  margin: 12px 0 0;
   padding: 34px 30px 0;
 
   &Title {
