--- a/src/views/Billing/CurrentPlan/components/Limit.scss
+++ b/src/views/Billing/CurrentPlan/components/Limit.scss
@@ -1,49 +1,41 @@
 @import '~@styles/colors';
 
 .Root {
-  padding: 12px 0;
+  align-items: flex-end;
+  border-top: 1px solid $color-gray-300;
+  display: flex;
+  margin: 12px 0;
+  padding: 0 30px;
+  width: 100%;
+}
+
+.Test {
+  margin: 0 30px 0 0;
+  width: 100%;
 }
 
 .Info {
   align-items: center;
-  border-top: 1px solid $color-gray-300;
   display: flex;
-  justify-content: space-between;
-  padding: 34px 30px 0;
-
-  &Title {
-    align-items: center;
-    display: flex;
-    font-weight: 600;
-  }
-
-  &Limit {
-    color: $color-gray-600;
-    margin: 0 0 0 20px;
-  }
+  padding: 34px 0 0;
 }
 
-.ProgressInfo {
-  align-items: center;
-  display: flex;
-  margin: 4px 0 0 0;
-  padding: 0 30px;
-
-  &Price {
-    margin: 0 0 0 30px;
-  }
+.Counter {
+  color: $color-gray-600;
+  flex: 1 1 auto;
+  margin: 0 0 0 20px;
 }
 
-.ProgressScale {
+.Progress {
   align-items: center;
   display: flex;
   height: 4px;
-  margin: 0 30px 0 0;
+  margin: 10px 30px 0 0;
   position: relative;
   width: 100%;
 }
 
-.Progress {
+.ProgressBar {
   background-color: #6781f4;
   border-radius: 2px;
   box-shadow: 0 12px 12px 0 rgba(103, 129, 244, .2);
@@ -51,15 +43,9 @@
   position: absolute;
 }
 
-.Scale {
+.ProgressCover {
   background-color: #f5f5f3;
   border-radius: 1px;
   height: 2px;
   width: 100%;
-}
-
-.Text {
-  color: $color-gray-600;
-  font-weight: 600;
-  margin: 0 63px 0 0;
 }
