Added new block to Flow Builder.

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -60,6 +60,7 @@ $color-vk: #2787f5;
 // @todo - can be generated using a loop
 $coloring-variants: (
   Blue: $color-primary,
+  Default: $color-gray-800,
   Gray: $color-gray-500,
   Green: $color-green-500,
   Orange: $color-orange-500,
