--- a/src/views/Billing/NextPlan/NextPlan.scss
+++ b/src/views/Billing/NextPlan/NextPlan.scss
@@ -1,3 +1,40 @@
+@import '~@styles/colors';
+
 .Root {
   grid-area: b;
+  width: 280px;
+}
+
+.Container {
+  align-items: center;
+  display: flex;
+  padding: 32px 30px;
+}
+
+.Date {
+  font-weight: 600;
+}
+
+.Header {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.Info {
+  color: $color-blue-300;
+  margin: 20px 0 56px;
+}
+
+.Title {
+  color: $color-blue-300;
+}
+
+.Price {
+  margin: 52px 0 0;
+}
+
+.SubTitle {
+  color: $color-gray-600;
 }
