--- a/src/views/FlowBuilder/Common/components/Block.scss
+++ b/src/views/FlowBuilder/Common/components/Block.scss
@@ -5,6 +5,19 @@
     box-shadow: 0 0 0 2px rgba($color, 1);
   }
 
+  .Handle {
+    border: 3px solid rgba($color, .2);
+
+    &::before {
+      background: $color;
+      box-shadow: 0 2px 3px 0 rgba($color, .6);
+    }
+
+    &:hover {
+      border-color: rgba($color, .6);
+    }
+  }
+
   .Icon {
     background: rgba($color, .2);
     color: $color;
@@ -25,4 +38,51 @@
   height: 100%;
   justify-content: center;
   width: 100%;
+}
+
+.Handle {
+  background: $color-gray-0;
+  height: 20px;
+  transition: all .2s;
+  width: 20px;
+
+  &::before {
+    background: #f00;
+    border-radius: 100%;
+    content: '';
+    display: none;
+    height: 10px;
+    left: 2px;
+    position: absolute;
+    top: 2px;
+    width: 10px;
+  }
+
+  &:hover {
+    cursor: pointer;
+  }
+
+  &Is {
+    &Connected {
+      &::before {
+        display: block;
+      }
+    }
+  }
+}
+
+.Source {
+  color: $color-gray-600;
+  margin: 20px 0 0;
+  position: relative;
+  text-align: right;
+
+  .Handle {
+    right: -30px;
+  }
+}
+
+.Target {
+  left: -10px;
+  top: 40px;
 }
