--- a/src/views/FlowBuilder/Common/components/Block.scss
+++ b/src/views/FlowBuilder/Common/components/Block.scss
@@ -36,10 +36,10 @@
 }
 
 .Source {
-  right: -30px;
+  right: -30px !important;
 }
 
 .Target {
-  left: -10px;
-  top: 40px;
+  left: -10px !important;
+  top: 40px !important;
 }
