--- a/src/views/FlowBuilder/Common/components/Handle.scss
+++ b/src/views/FlowBuilder/Common/components/Handle.scss
@@ -1,23 +1,23 @@
 @import '~@styles/colors';
 
 @mixin color($color) {
-  border: 3px solid rgba($color, .2);
+  border: 3px solid rgba($color, .2) !important;
 
   &::before {
-    background: $color;
-    box-shadow: 0 2px 3px 0 rgba($color, .6);
+    background: $color !important;
+    box-shadow: 0 2px 3px 0 rgba($color, .6) !important;
   }
 
   &:hover {
-    border-color: rgba($color, .6);
+    border-color: rgba($color, .6) !important;
   }
 }
 
 .Root {
-  background: $color-gray-0;
-  height: 20px;
+  background: $color-gray-0 !important;
+  height: 20px !important;
   transition: all .2s;
-  width: 20px;
+  width: 20px !important;
 
   @include coloring();
 
