--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -25,6 +25,7 @@
 
   &:hover:not(:active) {
     background: rgba($color, .2);
+    border-color: transparent;
   }
 }
 
@@ -114,11 +115,6 @@
     &Outlined {
       background: transparent;
       border: 2px solid;
-
-      &:active,
-      &:hover:not(:active) {
-        border: 0;
-      }
 
       &.RootColor {
         &Default {
