--- a/src/views/Billing/Billing.scss
+++ b/src/views/Billing/Billing.scss
@@ -1,14 +1,11 @@
 @import '~@styles/colors';
 
 .Root {
-  column-gap: 30px;
+  column-gap: 28px;
   display: grid;
   grid-template-areas:
     'a  b'
     'c  c';
-}
-
-.NextPlan {
-  margin: 0 0 0 30px;
-  width: 280px;
+  grid-template-columns: 1fr 280px;
+  grid-template-rows: 1fr 1fr;
 }
