--- a/src/views/Billing/Current/Current.scss
+++ b/src/views/Billing/Current/Current.scss
@@ -10,28 +10,10 @@
 }
 
 .Features {
-  border-top: 1px solid $color-gray-100;
   display: grid;
+  grid-gap: 16px 16px;
   grid-template-columns: repeat(3, 1fr);
-  margin: 14px 0 0;
-  padding: 28px 30px;
-  row-gap: 16px;
-}
-
-.Header {
-  padding: 24px 30px 0;
-}
-
-.Icon {
-  align-items: center;
-  background-color: rgba($color-blue-300, .2);
-  border-radius: 100%;
-  color: $color-blue-300;
-  display: flex !important;
-  font-size: 16px;
-  height: 40px;
-  justify-content: center;
-  width: 40px;
+  margin: 28px 0;
 }
 
 .Info {
@@ -85,5 +67,4 @@
 
 .Title {
   color: $color-gray-400;
-  margin: 0 0 0 30px;
 }
