--- a/src/views/Billing/Current/components/Limit.scss
+++ b/src/views/Billing/Current/components/Limit.scss
@@ -2,29 +2,25 @@
 
 .Root {
   align-items: flex-end;
-  border-top: 1px solid $color-gray-300;
   display: flex;
-  margin: 12px 0;
-  padding: 0 30px;
+  margin: 32px 0;
   width: 100%;
 }
 
-.Test {
-  margin: 0 30px 0 0;
-  padding: 0 0 9px 0;
-  width: 100%;
-}
-
-.Info {
-  align-items: center;
-  display: flex;
-  padding: 34px 0 0;
+.Content {
+  flex: 1 1 auto;
+  margin: 0 28px 0 0;
 }
 
 .Counter {
   color: $color-gray-600;
   flex: 1 1 auto;
   margin: 0 0 0 20px;
+}
+
+.Info {
+  align-items: center;
+  display: flex;
 }
 
 .Progress {
