--- a/src/components/Form/components/Toggle.scss
+++ b/src/components/Form/components/Toggle.scss
@@ -13,7 +13,7 @@
       background-color: $color-green-500;
 
       .Circle {
-        transform: translate(16px, 0);
+        transform: translateX(16px);
       }
     }
   }
@@ -23,7 +23,7 @@
   background-color: $color-gray-0;
   border-radius: 10px;
   height: 14px;
-  transform: translate(0, 0);
+  transform: translateX(0);
   transition: .4s;
   width: 14px;
 }
