--- a/src/views/FlowBuilder/Start/Start.scss
+++ b/src/views/FlowBuilder/Start/Start.scss
@@ -8,3 +8,11 @@
   color: $color-gray-600;
   margin: 16px 0 0;
 }
+
+.Triggers {
+  margin: 20px 0 0;
+
+  & > *:not(:first-child) {
+    margin: 8px 0 0;
+  }
+}
