Added component ContextMenu.

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -2,6 +2,7 @@
 $color-blue-500: #0048e3;
 $color-blue-300: #6781f4;
 $color-blue-200: #a4b3f8;
+$color-blue-100: #e1e6fd;
 $color-blue-50: #eff2fd;
 
 // Gray
