--- a/src/components/ContextMenu/ContextMenu.scss
+++ b/src/components/ContextMenu/ContextMenu.scss
@@ -1,11 +1,11 @@
 @import '~@styles/colors';
 
 .Root {
+  z-index: 10;
+}
+
+.Card {
   border: 2px solid rgba($color-primary, .2);
   box-shadow: 0 20px 40px 0 rgba(0, 0, 0, .1);
-  left: 400px;
-  position: absolute;
-  top: 40px;
   width: 220px;
-  z-index: 10;
 }
