--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -20,6 +20,7 @@
 :global * {
   box-shadow: none;
   box-sizing: inherit;
+  scroll-behavior: smooth;
   scrollbar-color: transparent transparent;
   scrollbar-width: thin;
 
