--- a/src/views/FlowBuilder/Randomize/Randomize.scss
+++ b/src/views/FlowBuilder/Randomize/Randomize.scss
@@ -17,11 +17,10 @@
   background: $color-gray-100;
   border: 2px solid $color-gray-300;
   border-radius: 16px;
-  margin: 16px 0 0;
-  padding: 8px;
+  margin: 28px 0 0;
+  padding: 0 20px;
 
   & > *:not(:first-child) {
     border-top: 2px solid $color-gray-300;
-    margin: 8px 0 0;
   }
 }
