--- a/src/views/FlowBuilder/Content/components/Text.scss
+++ b/src/views/FlowBuilder/Content/components/Text.scss
@@ -20,6 +20,12 @@
   }
 }
 
+.Add {
+  border-top: 2px solid $color-gray-300;
+  margin: 12px 0 0 !important;
+  padding: 12px 0 0;
+}
+
 .Description {
   padding: 0 10px;
 }
