--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,9 +1,12 @@
 // Blue
 $color-blue-500: #0048e3;
-$color-blue-300: #6781f4;
+$color-blue-300: #5c68ec;
 $color-blue-200: #a4b3f8;
 $color-blue-100: #e1e6fd;
 $color-blue-50: #eff2fd;
+
+// Brown
+$color-brown: #887466;
 
 // Gray
 $color-gray-1000: #000;
@@ -20,7 +23,7 @@ $color-gray-50: #fafbff;
 $color-gray-0: #fff;
 
 // Green
-$color-green-500: #48b531;
+$color-green-500: #5fa24b;
 $color-green-50: #bbe0b3;
 
 // Orange
