Added landing footer.

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -24,6 +24,8 @@ $color-gray-0: #fff;
 
 // Green
 $color-green-500: #5fa24b;
+$color-green-400: #7aba69;
+$color-green-300: #98d788;
 $color-green-50: #bbe0b3;
 
 // Orange
