--- a/src/views/Landing/Landing.scss
+++ b/src/views/Landing/Landing.scss
@@ -5,6 +5,25 @@
   width: 100%;
 }
 
+.Footer {
+  background-image: linear-gradient(to bottom, #5461ea, #76adff);
+  display: flex;
+  flex-direction: column-reverse;
+  height: 1780px;
+  position: relative;
+  width: 100%;
+
+  &Cover {
+    background: url('./Common/assets/footer-background.png') no-repeat;
+    background-size: contain;
+    bottom: 0;
+    height: 1007px;
+    position: absolute;
+    right: 0;
+    width: 1920px;
+  }
+}
+
 .Intro {
   background-image: linear-gradient(to bottom, #76adff, #5461ea);
   color: $color-gray-0;
