Added half landing.

--- a/src/components/Typography/Typography.scss
+++ b/src/components/Typography/Typography.scss
@@ -91,6 +91,10 @@
       font-weight: 700;
     }
 
+    &ExtraBold {
+      font-weight: 900;
+    }
+
     &Medium {
       font-weight: 600;
     }
