--- a/src/views/Landing/containers/Combine.scss
+++ b/src/views/Landing/containers/Combine.scss
@@ -1,5 +1,5 @@
 .Container {
-  background: url('./assets/background.png') no-repeat;
+  background: url('../assets/combine-bg.png') no-repeat;
   background-size: contain;
   height: 980px;
   width: 1200px;
