--- a/src/views/Landing/containers/Intro.scss
+++ b/src/views/Landing/containers/Intro.scss
@@ -9,7 +9,7 @@
 }
 
 .Background {
-  background: url('./assets/background.png') no-repeat;
+  background: url('../assets/intro-bg.png') no-repeat;
   background-size: contain;
   height: 100%;
   position: relative;
@@ -18,7 +18,7 @@
 }
 
 .Blue {
-  background: url('./assets/background-blue.svg') no-repeat;
+  background: url('../assets/intro-blue.svg') no-repeat;
   background-size: contain;
   height: 100%;
   position: absolute;
