--- a/src/views/Landing/components/Button.scss
+++ b/src/views/Landing/components/Button.scss
@@ -1,19 +1,45 @@
 @import '~@styles/colors';
 
 .Root {
-  background-clip: content-box, border-box;
+  align-items: center;
   background-image: linear-gradient(to bottom, #fea250, #eb3d3b);
-  background-image: linear-gradient(to bottom, #fea250, #eb3d3b), linear-gradient(to bottom, #feb373, #ef6463);
-  background-origin: border-box;
-  border: 2px solid rgba($color-gray-0, .2);
-  border-image-slice: 1;
-  border-image-source: linear-gradient(to bottom, #feb373, #ef6463);
-  border-radius: 30px;
-  border-style: solid;
-  border-width: 2px;
-  box-shadow: 0 6px 6px 0 rgba(255, 155, 104, .6), 0 -6px 6px 0 rgba(255, 255, 255, .3);
-  box-shadow: 0 16px 16px 0 rgba(255, 155, 104, .8);
+  border: 0;
+  border-radius: 36px;
+  box-shadow: 0 6px 6px 0 rgba(255, 155, 104, .6);
   color: $color-gray-0;
-  height: 54px;
-  width: 144px;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  width: 100%;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.Background {
+  background-color: $color-gray-0;
+  border-radius: 80px;
+  box-shadow: inset 0 2px 6px 0 #e7e9f0, inset 0 0 2px 0 #e7e9f0;
+  height: 80px;
+  padding: 8px;
+  width: 180px;
+}
+
+.Cover {
+  background-image: linear-gradient(to bottom, #eb3d3b, #fea250);
+  border-radius: 36px;
+  box-shadow: 0 6px 6px 0 rgba(255, 155, 104, .6), 0 -6px 6px 0 rgba(255, 255, 255, .3);
+  height: 100%;
+  padding: 6px;
+  transition: all .2s;
+  width: 100%;
+
+  &:hover {
+    padding: 2px;
+  }
+}
+
+.Text {
+  letter-spacing: .4px;
 }
