--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -26,10 +26,12 @@ $color-gray-0: #fff;
 $color-green-500: #5fa24b;
 $color-green-400: #7aba69;
 $color-green-300: #98d788;
+$color-green-200: #b0e3a2;
 $color-green-50: #bbe0b3;
 
 // Orange
 $color-orange-500: #fb681b;
+$color-orange-400: #fea250;
 
 // Pink
 $color-pink-500: #d13bfb;
@@ -38,6 +40,7 @@ $color-pink-500: #d13bfb;
 $color-purple-500: #7c50f8;
 
 // Red
+$color-red-600: #eb3d3b;
 $color-red-500: #fb4242;
 $color-red-300: #ee6c7e;
 $color-red-200: #f5a7b2;
