--- a/src/views/Landing/components/Button.scss
+++ b/src/views/Landing/components/Button.scss
@@ -2,41 +2,81 @@
 
 .Root {
   align-items: center;
-  background-image: linear-gradient(to bottom, #fea250, #eb3d3b);
   border: 0;
-  border-radius: 36px;
-  box-shadow: 0 6px 6px 0 rgba(255, 155, 104, .6);
-  color: $color-gray-0;
   display: flex;
   height: 100%;
   justify-content: center;
-  width: 100%;
+
+  &:active {
+    opacity: .7;
+  }
 
   &:hover {
     cursor: pointer;
+  }
+
+  &Variant {
+    &Green {
+      background: $color-gray-0;
+      border: 2px solid #dee8da;
+      border-radius: 30px;
+      color: $color-green-500;
+      height: 54px;
+      min-width: 144px;
+      transition: all .2s;
+
+      &:active,
+      &:hover {
+        background: linear-gradient(to top, $color-green-400, $color-green-200);
+        border-color: rgba($color-gray-0, .2);
+        box-shadow: 0 6px 6px 0 rgba(176, 227, 162, .8);
+        color: $color-gray-0;
+      }
+    }
+
+    &Orange {
+      background-image: linear-gradient(to bottom, $color-orange-400, $color-red-600);
+      border-radius: 36px;
+      box-shadow: 0 6px 6px 0 rgba(255, 155, 104, .6);
+      color: $color-gray-0;
+    }
+
+    &OrangeWhite {
+      background-image: linear-gradient(to bottom, $color-orange-400, $color-red-600);
+      border-radius: 36px;
+      color: $color-gray-0;
+      min-width: 152px;
+    }
   }
 }
 
 .Background {
   background-color: $color-gray-0;
   border-radius: 80px;
-  box-shadow: inset 0 2px 6px 0 #e7e9f0, inset 0 0 2px 0 #e7e9f0;
+  box-shadow: inset 0 2px 6px 0 $color-gray-300, inset 0 0 2px 0 $color-gray-300;
   height: 80px;
   padding: 8px;
   width: 180px;
 }
 
 .Cover {
-  background-image: linear-gradient(to bottom, #eb3d3b, #fea250);
+  background-image: linear-gradient(to bottom, $color-red-600, $color-orange-400);
   border-radius: 36px;
-  box-shadow: 0 6px 6px 0 rgba(255, 155, 104, .6), 0 -6px 6px 0 rgba(255, 255, 255, .3);
+  box-shadow: 0 6px 6px 0 rgba(255, 155, 104, .6), 0 -6px 6px 0 rgba($color-gray-0, .3);
   height: 100%;
   padding: 6px;
   transition: all .2s;
-  width: 100%;
 
   &:hover {
+    box-shadow: 0 16px 16px 0 rgba(255, 155, 104, .8);
     padding: 2px;
+  }
+
+  &Size {
+    &Small {
+      height: 54px;
+      width: 144px;
+    }
   }
 }
 
