--- a/src/views/Landing/containers/Header/Header.scss
+++ b/src/views/Landing/containers/Header/Header.scss
@@ -6,9 +6,35 @@
   z-index: 4;
 }
 
+.Actions {
+  align-items: center;
+  display: flex;
+  margin: 0 0 0 40px;
+
+  & > *:not(:first-child) {
+    margin: 0 0 0 20px;
+  }
+}
+
 .Container {
+  align-items: center;
   background: #eef4ec;
   border: 4px solid $color-gray-0;
   border-radius: 50px;
+  display: flex;
   height: 100px;
+  justify-content: space-between;
+  padding: 20px;
+  width: 100%;
+}
+
+.Left {
+  align-items: center;
+  color: $color-brown;
+  display: flex;
+  flex: 1 1 auto;
+}
+
+.Title {
+  margin: 0 0 0 12px;
 }
