--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -42,7 +42,7 @@ $color-purple-500: #7c50f8;
 // Red
 $color-red-600: #eb3d3b;
 $color-red-500: #fb4242;
-$color-red-300: #ee6c7e;
+$color-red-300: #ff7176;
 $color-red-200: #f5a7b2;
 $color-red-50: #fdf0f2;
 
@@ -50,7 +50,7 @@ $color-red-50: #fdf0f2;
 $color-sky-500: #0089ff;
 
 // Yellow
-$color-yellow-500: #f47e05;
+$color-yellow-500: #ffe26c;
 
 // Common
 $color-danger: $color-red-300;
