--- a/src/views/Landing/containers/Intro.scss
+++ b/src/views/Landing/containers/Intro.scss
@@ -14,14 +14,14 @@
 }
 
 .Background {
-  background: url('../assets/intro-bg.png') no-repeat center bottom / cover;
+  background: url('../assets/intro-bg.webp') no-repeat center bottom / cover;
   height: 100%;
   position: relative;
   width: 100%;
   z-index: 2;
 
   @include breakpoints(mobile) {
-    background-image: url('../assets/intro-bg_mobile.png');
+    background-image: url('../assets/intro-bg_mobile.webp');
     height: 952px;
   }
 }
